style: fix broken style

--- a/app/assets/stylesheets/parts/article-content.css
+++ b/app/assets/stylesheets/parts/article-content.css
@@ -29,6 +29,8 @@
       text-orientation: mixed;
       gap: 2rem;
 
+      max-width: 95vw;
+
       overflow-x: scroll;
 
       .article__content__title {
